--- a/public/css/trongate.css
+++ b/public/css/trongate.css
@@ -48,6 +48,7 @@ img {
 }
 
 input[type="text"],
+input[type="search"],
 input[type="number"],
 input[type="email"],
 input[type="password"],
@@ -62,6 +63,7 @@ textarea {
 }
 
 input[type="text"]:focus,
+input[type="search"]:focus,
 input[type="number"]:focus,
 textarea:focus,
 input[type="email"]:focus,
@@ -72,6 +74,7 @@ select:focus {
 }
 
 input[type="text"],
+input[type="search"],
 input[type="number"],
 input[type="email"],
 input[type="password"],
@@ -235,32 +238,61 @@ div.modal-body p.text-center {
 }
 
 .container-xxs {
+  width: 90%;
   max-width: 450px;
+  margin: 0 auto;
+  padding: 1em;
 }
 
 .container-xs {
+  width: 90%;
   max-width: 640px;
+  margin: 0 auto;
+  padding: 1em;
 }
 
 .container-sm {
+  width: 90%;
   max-width: 760px;
+  margin: 0 auto;
+  padding: 1em;
+}
+
+.container-md {
+  width: 90%;
+  max-width: 820px;
+  margin: 0 auto;
+  padding: 1em;
 }
 
 .container-lg {
+  width: 90%;
   max-width: 960px;
+  margin: 0 auto;
+  padding: 1em;
 }
 
 .container-xl {
+  width: 90%;
   max-width: 1100px;
+  margin: 0 auto;
+  padding: 1em;
 }
 
 .container-xxl {
+  width: 90%;
   max-width: 1300px;
+  margin: 0 auto;
+  padding: 1em;
 }
 
 .pagination {
   display: inline-block;
-  margin: 1em 0;
+  margin-top: 1em;
+}
+
+.pagination:first-of-type {
+  margin: 0 0 1em 0;
 }
 
 .pagination a {
@@ -504,6 +536,10 @@ div.modal-body p.text-center {
   font-size: 0.7em;
 }
 
+.mt-0 {
+  margin-top: 0 !important;
+}
+
 .mt-1 {
   margin-top: 1em !important;
 }
@@ -514,6 +550,10 @@ div.modal-body p.text-center {
 
 .mt-3 {
   margin-top: 3em !important;
+}
+
+.mb-0 {
+  margin-bottom: 0 !important;
 }
 
 .mb-1 {
@@ -579,6 +619,158 @@ div.modal-body p.text-center {
   }
 }
 
+.mx-indicator-hidden {
+  display: none;
+}
+
+.mx-animation-container-cross {
+  padding-top: 0;
+  min-height: 200px;
+}
+
+.mx-animation-container-tick {
+    padding-top: 33px;
+    min-height: 200px;
+}
+
+#big-tick,
+#big-cross {
+  min-width: 100%;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+#big-tick {
+  padding-top: 45px;
+  min-height: 200px;
+}
+
+#cross {
+  padding-top: 0;
+    min-height: 120px;
+    padding-bottom: 33px;
+}
+
+#tick {
+  margin: 0 auto;
+  max-height: 154px;
+}
+
+.circ {
+  opacity: 0;
+  stroke-dasharray: 130;
+  stroke-dashoffset: 130;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+
+.tick {
+  stroke-dasharray: 50;
+  stroke-dashoffset: 50;
+  -webkit-transition: stroke-dashoffset 1s 0.5s ease-out;
+  -moz-transition: stroke-dashoffset 1s 0.5s ease-out;
+  -ms-transition: stroke-dashoffset 1s 0.5s ease-out;
+  -o-transition: stroke-dashoffset 1s 0.5s ease-out;
+  transition: stroke-dashoffset 1s 0.5s ease-out;
+}
+
+.cross {
+  stroke-dasharray: 50;
+  stroke-dashoffset: 50;
+  -webkit-transition: stroke-dashoffset 1s 0.7s ease-out;
+  -moz-transition: stroke-dashoffset 1s 0.7s ease-out;
+  -ms-transition: stroke-dashoffset 1s 0.7s ease-out;
+  -o-transition: stroke-dashoffset 1s 0.7s ease-out;
+  transition: stroke-dashoffset 1s 0.7s ease-out;
+}
+
+.trigger.drawn .path,
+.drawn + svg .path {
+  opacity: 1;
+  stroke-dashoffset: 0;
+}
+
+.mx-animation-container-cross {
+  padding-top: 0;
+  min-height: 200px;
+}
+
+.mx-animation-container-tick {
+    padding-top: 33px;
+    min-height: 200px;
+}
+
+#mx-big-tick,
+#mx-big-cross {
+  min-width: 100%;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+#mx-big-tick {
+  padding-top: 45px;
+  min-height: 200px;
+}
+
+#mx-cross {
+  padding-top: 0;
+    min-height: 120px;
+    padding-bottom: 33px;
+}
+
+#mx-tick {
+  margin: 0 auto;
+  max-height: 154px;
+}
+
+.mx-circ {
+  opacity: 0;
+  stroke-dasharray: 130;
+  stroke-dashoffset: 130;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+
+.mx-tick {
+  stroke-dasharray: 50;
+  stroke-dashoffset: 50;
+  -webkit-transition: stroke-dashoffset 1s 0.5s ease-out;
+  -moz-transition: stroke-dashoffset 1s 0.5s ease-out;
+  -ms-transition: stroke-dashoffset 1s 0.5s ease-out;
+  -o-transition: stroke-dashoffset 1s 0.5s ease-out;
+  transition: stroke-dashoffset 1s 0.5s ease-out;
+}
+
+.mx-cross {
+  stroke-dasharray: 50;
+  stroke-dashoffset: 50;
+  -webkit-transition: stroke-dashoffset 1s 0.7s ease-out;
+  -moz-transition: stroke-dashoffset 1s 0.7s ease-out;
+  -ms-transition: stroke-dashoffset 1s 0.7s ease-out;
+  -o-transition: stroke-dashoffset 1s 0.7s ease-out;
+  transition: stroke-dashoffset 1s 0.7s ease-out;
+}
+
+.mx-trigger.mx-drawn .path,
+.mx-drawn + svg .path {
+  opacity: 1;
+  stroke-dashoffset: 0;
+}
+
 @media screen and (max-width: 550px) {
   button,
   .button {
@@ -597,4 +789,10 @@ div.modal-body p.text-center {
   .modal-footer button:last-child {
     margin: 0px 0 0 0.3em;
   }
+
+  p.button-container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  
 }
